manualprocess/yaml/old/zlserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: zlserver
  name: zlserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zlserver
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zlserver
    spec:
      serviceAccountName: zlapp-sa
      imagePullSecrets:
        - name: docker-secret
      containers:
        - name: zlserver
          image: 995553364920.dkr.ecr.us-west-1.amazonaws.com/uw1-zlps-ecr-01:zlserver11.1.0-b1140
          imagePullPolicy: Always
          #imagePullPolicy: Never
          resources:
            limits:
              cpu: 250m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 9972
          volumeMounts:
            - mountPath: /opt/ZipLip/zlserver/WEB-INF/tmp
              name: zlservertemp
      volumes:
        - name: zlservertemp
          persistentVolumeClaim:
            claimName: zlservertemp-efs
status: {}
