manualprocess/yaml/old/zltika-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: zltika
  name: zltika
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zltika
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zltika
    spec:
      serviceAccountName: zlapp-sa
      imagePullSecrets:
        - name: docker-secret
      containers:
        - name: zltika
          image: 995553364920.dkr.ecr.us-west-1.amazonaws.com/uw1-zlps-ecr-01:zltika11.1.0-b1140
          imagePullPolicy: Always
          #imagePullPolicy: Never
          resources:
            limits:
              cpu: 250m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 9972
          volumeMounts:
            - mountPath: /opt/ZipLip/zlserver/WEB-INF/tmp
              name: zltikatemp
      volumes:
        - name: zltikatemp
          persistentVolumeClaim:
            claimName: zltikatemp-efs
status: {}
